Refactoring, fixing deprecation warnings.